# binky_buildroot

./: Config.in  README  README.md  add_acr122_usb_driver_to_libnfc_package.patch  increase_fat32_partition_size.diff
board/raspberrypi3/: linux.config  post-image.sh
board/raspberrypi3/rootfs_overlay/etc/init.d/: S90squeezelite
br_external/board/raspberrypi3/: linux.config  post-image2.sh
br_external/board/raspberrypi3/rootfs_overlay/etc/: asound.conf
br_external/board/raspberrypi3/rootfs_overlay/etc/init.d/: S89squeezenfc  S90squeezelite
br_external/board/raspberrypi3/rootfs_overlay/usr/sbin/: upgrade.sh
br_external/configs/: binky_defconfig  binky_rpi0w_defconfig
br_external/package/squeezenfc/: Config.in  squeezenfc.mk
configs/: radio_defconfig
package/squeezenfc/: squeezenfc.mk
package/squeezenfc/src/: main.c  meson.build
